# vmware-vcf-aws-evs

./: .codecov.yml  .contributors-activation  .dockerignore  .flake8  .github-verified  .gitignore  .gpg-verified  .imgbotconfig  .markdownlint.json  .pre-commit-config.yaml  .security-status  .trivyignore  .ultra-secure-status  .workflow-trigger  AUDIT-REPORT.md  CHANGELOG.md  CODEQL_FIX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  FEATURES.md  FOLDER_REFRESH.md  FREE-TIER-OPTIMIZATION.md  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  TECHNICAL_NOTES.md  enhancement.md  mkdocs.yml  mypy.ini  package.json  performance.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.amazonq/: .refresh  config.yml
.github/: SECURITY.md  copilot.yml  dependabot.yml  renovate.json  stale.yml  verified.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  comprehensive-ci.yml  contributors.yml  deploy.yml  security-scan.yml  security.yml  weekly-activity.yml
config/: config.example.yaml
docs/: CONTRIBUTING.md  HYBRID-CLOUD.md  PULL-REQUEST-001.md  best-practices.md  index.md  troubleshooting.md
docs/api/: python.md  terraform.md
docs/architecture/: backup.md  compliance.md  cost-optimization.md  incident-response.md  monitoring.md  overview.md  security.md
docs/tutorials/: backup.md  installation.md  migration.md  monitoring.md  quickstart.md  troubleshooting.md
examples/: README.md
scripts/migration/: migrate_vm.py
src/: .refresh
src/vcf_evs/: __init__.py  cli.py
src/vcf_evs/aws/: __init__.py  evs_client.py  monitoring.py
src/vcf_evs/utils/: __init__.py  config.py  logger.py
src/vcf_evs/vmware/: __init__.py  vcenter_client.py
terraform/examples/: .refresh.md
terraform/examples/basic/: .refresh.md  main.tf  variables.tf
terraform/modules/: .refresh
terraform/modules/evs-cluster/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  test-enhancement.md
tests/integration/: __init__.py
tests/unit/: __init__.py  test_evs_client.py
